; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_immio.c_nibble_inbyte_hook.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_immio.c_nibble_inbyte_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vpo_nibble = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @nibble_inbyte_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nibble_inbyte_hook(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vpo_nibble*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.vpo_nibble*
  store %struct.vpo_nibble* %7, %struct.vpo_nibble** %5, align 8
  %8 = load %struct.vpo_nibble*, %struct.vpo_nibble** %5, align 8
  %9 = getelementptr inbounds %struct.vpo_nibble, %struct.vpo_nibble* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = ashr i32 %10, 4
  %12 = and i32 %11, 15
  %13 = load %struct.vpo_nibble*, %struct.vpo_nibble** %5, align 8
  %14 = getelementptr inbounds %struct.vpo_nibble, %struct.vpo_nibble* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, 240
  %17 = add nsw i32 %12, %16
  %18 = trunc i32 %17 to i8
  %19 = load i8*, i8** %4, align 8
  store i8 %18, i8* %19, align 1
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
